# monad-challenges-solutions

./: ChangeLog.md  README.md  package.yaml  stack.yaml
MonadChallenge.hsproj/: .uuid  MCPrelude.hs  MonadChallenge.cabal  Set1.hs  Set2.hs  Set3.hs  _HexDecode.hsplay  _Set1.hsplay  _Set2.hsplay  _Set3.hsplay
src/: HexDecode.hs  Set1.hs  Set3.hs
test/: Spec.hs
