name: MonadChallenge
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable MonadChallenge
    main-is: Set1.hs
    build-depends:
        base -any,
        split -any
    default-language: Haskell2010
    other-modules:
        MCPrelude
        Set2
        HexDecode

